--- a/package.json
+++ b/package.json
@@ -1,10 +1,20 @@
 {
   "name": "vue-easy-form",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
+  "main": "dist/vue-easy-form.umd.js",
+  "module": "dist/vue-easy-form.esm.js",
+  "unpkg": "dist/vue-easy-form.min.js",
+  "files": [
+    "dist/*",
+    "src/*",
+    "public/*",
+    "*.json",
+    "*.js"
+  ],
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "build": "vue-cli-service build --target lib --name vue-easy-form src/lib/index.js",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
@@ -17,8 +27,12 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "autoprefixer": "^10.4.20",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "postcss": "^8.4.41",
+    "postcss-loader": "^8.1.1",
+    "tailwindcss": "^3.4.10"
   },
   "eslintConfig": {
     "root": true,
