--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "vue-easy-form",
-  "version": "0.1.0",
+  "name": "@reflyh2/vue-easy-form",
+  "version": "0.1.3",
   "private": false,
   "main": "dist/vue-easy-form.umd.js",
   "module": "dist/vue-easy-form.esm.js",
@@ -18,6 +18,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@reflyh2/vue-easy-form": "^0.1.1",
     "core-js": "^3.8.3",
     "vue": "^3.2.13"
   },
