--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@reflyh2/vue-easy-form",
-  "version": "0.1.12",
+  "version": "0.1.13",
   "repository": {
     "type": "git",
     "url": "https://github.com/reflyh2/vue-easy-form.git"
@@ -28,6 +28,7 @@
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
+    "@heroicons/vue": "^2.1.5",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
